--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "mlx>=0.26.1",
     "mlx-lm>=0.24.1",
     "nano-vectordb>=0.0.4.3",
+    "openai-agents>=0.0.17",
     "python-dotenv>=1.1.0",
     "torch>=2.7.0",
 ]
