--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "anthropic>=0.52.2",
     "dspy>=2.6.24",
     "ipython>=9.3.0",
-    "langchain>=0.3.25",
+    "langchain[anthropic,openai]>=0.3.25",
     "langgraph>=0.4.7",
     "lightrag-hku[api]>=1.3.8",
     "litellm>=1.72.0",
