--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langgraph>=0.4.7",
     "lightrag-hku[api]>=1.3.8",
     "litellm>=1.72.0",
+    "llm>=0.26",
     "lmstudio>=1.3.1",
     "mcp[cli]>=1.9.2",
     "mlx>=0.26.1",
